# arxiv

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
crates/arxiv/: Cargo.toml
crates/arxiv/src/: article_id.rs  article_version.rs  category_id.rs  group.rs  stamp.rs
crates/arxiv_taxonomy/: Cargo.toml  README.md
crates/arxiv_taxonomy/src/: generate.rs  http.rs  main.rs  types.rs
src/: archive.rs  article_id.rs  article_version.rs  category.rs  category_id.rs  group.rs  identifier.rs  lib.rs  serde.rs  stamp.rs  subject_tables.rs
src/article_id/: mod.rs  parser.rs  v1.rs  v2.rs
