[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Samantha Nguyen, <contact@samanthanguyen.me>"]
description = "Rust library to parse arXiv identifiers and references"
repository = "https://github.com/neoncitylights/arxiv"
license = "MIT OR Apache-2.0"
categories = ["parsing", "text-processing"]
keywords = ["arxiv"]
edition = "2021"
rust-version = "1.70.0"
