[package]
name = "arxiv_taxonomy"
publish = false

edition.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
rust-version.workspace = true

[dependencies]
futures = "0.3.31"
heck = "0.5.0"
prettyplease = "0.2.35"
proc-macro2 = "1.0.95"
quote = "1.0.40"
regex = "1.11.1"
syn = "2.0.104"
thirtyfour = "0.36.1"
tokio = { version = "1.46.1", features = ["full"] }
